--- a/backend/src/main/resources/messages_en.properties
+++ b/backend/src/main/resources/messages_en.properties
@@ -1,8 +1,27 @@
-add.success=Added successfully
-add.failure=Failed to add
-delete.success=Deleted successfully
-delete.failure=Failed to delete
-update.success=Modified successfully
-update.failure=Failed to modify
-query.success=Retrieved successfully
-query.failure=Failed to retrieve
+add.success=Added successfully.
+add.failure=Failed to add.
+delete.success=Deleted successfully.
+delete.failure=Failed to delete.
+update.success=Modified successfully.
+update.failure=Failed to modify.
+query.success=Retrieved successfully.
+query.failure=Failed to retrieve.
+upload.success=Uploaded successfully.
+some.files.upload.failure=Some files failed to upload.
+create.directory.success=Directory created successfully.
+create.directory.failure=Failed to create directory.
+compress.success=Compressed successfully.
+compress.failure=Failed to compress.
+move.success=Moved successfully.
+move.failure=Failed to move.
+some.files.move.failure=Some files failed to move.
+rename.success=Renamed successfully.
+rename.failure=Failed to rename.
+generate.success=Generated successfully
+generate.failure=Failed to generate.
+unsupported.file.type=Unsupported file type.
+file.already.exists=File already exists.
+file.does.not.exist=File does not exist.
+access.failure=Unable to access.
+no.incoming.files=No incoming files.
+file.is.too.large=File is too large, no preview allowed.
