--- a/backend/src/main/resources/messages_zh.properties
+++ b/backend/src/main/resources/messages_zh.properties
@@ -6,3 +6,21 @@ update.success=修改成功
 update.failure=修改失败
 query.success=查询成功
 query.failure=查询失败
+upload.success=上传成功
+some.files.upload.failure=部分文件上传失败
+create.directory.success=创建目录成功
+create.directory.failure=创建目录失败
+compress.success=压缩成功
+compress.failure=压缩失败
+move.sucess=移动成功
+move.failure=移动失败
+some.files.move.failure=部分文件移动失败
+rename.success=重命名成功
+rename.failure=重命名失败
+generate.success=生成成功
+unsupported.file.type=不支持的文件类型
+file.already.exists=文件已存在
+file.does.not.exist=文件不存在
+access.failure=无法访问
+no.incoming.files=没有文件
+file.is.too.large=文件过大，不允许预览
