--- a/backend/src/main/resources/messages_en.properties
+++ b/backend/src/main/resources/messages_en.properties
@@ -17,11 +17,19 @@ move.failure=Failed to move.
 some.files.move.failure=Some files failed to move.
 rename.success=Renamed successfully.
 rename.failure=Failed to rename.
-generate.success=Generated successfully
-generate.failure=Failed to generate.
+generate.success=Generated successfully.
 unsupported.file.type=Unsupported file type.
 file.already.exists=File already exists.
 file.does.not.exist=File does not exist.
 access.failure=Unable to access.
 no.incoming.files=No incoming files.
 file.is.too.large=File is too large, no preview allowed.
+
+filename=Filename
+length=Length
+relative.path=Relative path
+creation.time=Creation time
+modified.time=Last modified time
+contains=Contains
+file.folder.count={0} files, {1} folders
+file.type=File type
