--- a/backend/src/main/resources/messages_zh.properties
+++ b/backend/src/main/resources/messages_zh.properties
@@ -23,4 +23,13 @@ file.already.exists=文件已存在
 file.does.not.exist=文件不存在
 access.failure=无法访问
 no.incoming.files=没有文件
-file.is.too.large=文件过大，不允许预览
+file.is.too.large=文件过大，不允许预览 
+
+filename=文件名
+length=大小
+relative.path=相对路径
+creation.time=创建时间
+modified.time=修改时间
+contains=包含
+file.folder.count={0} 个文件, {1} 个文件夹
+file.type=文件类型
