--- a/backend/src/main/resources/messages_en.properties
+++ b/backend/src/main/resources/messages_en.properties
@@ -33,3 +33,65 @@ modified.time=Last modified time
 contains=Contains
 file.folder.count={0} files, {1} folders
 file.type=File type
+image.resolution=Image resolution
+capture.time=Capture time
+camera.maker=Camera maker
+camera.model=Camera model
+program.name=Program name
+audio.length=Duration
+audio.artist=Artist
+audio.title=Title
+audio.album=Album
+audio.comment=Comment
+
+days=days
+hours=hours
+minutes=minutes
+seconds=seconds
+
+get.request.information.failure=Failed to get request information.
+no.such.configuration=No such configuration found.
+
+
+
+
+operation.time=Operation time
+api.name=API name
+request.url=Request URL
+ip.address=IP address
+browser=Browser
+operating.system=Operating system
+request.method=Request method
+class.name=Class name
+method.name=Method name
+request.parameters=Request parameters
+parameter.type=Parameter type
+token=Token
+remark=Remark
+referer=Referer
+success=Success
+specific.message=Specific message
+execution.time=Execution time
+stack.trace=Stack trace
+
+port=Running port
+app.version=Application version
+java.version=Java version
+pid=PID
+uptime=Uptime
+hostname=Hostname
+username=Username
+os.version=OS version
+os.arch=OS Architecture
+memory.usage=Memory usage
+total.memory=Total physical memory size
+free.memory=Free physical memory size
+total.space=Current disk total space
+free.space=Current disk free space
+upload.path=File upload path
+directory.size=Directory size
+number.of.managed.files=Number of managed files
+database.path=Database path
+database.size=Database size
+number.of.pastes=Number of pastes
+number.of.bookmarks=Number of bookmarks
