--- a/backend/src/main/resources/messages_zh.properties
+++ b/backend/src/main/resources/messages_zh.properties
@@ -33,3 +33,63 @@ modified.time=修改时间
 contains=包含
 file.folder.count={0} 个文件, {1} 个文件夹
 file.type=文件类型
+image.resolution=图片分辨率
+capture.time=拍摄时间
+camera.maker=相机制造商
+camera.model=相机型号
+program.name=程序名称
+audio.length=持续时间
+audio.artist=艺术家
+audio.title=标题
+audio.album=专辑
+audio.comment=注释
+
+days=天
+hours=小时
+minutes=分钟
+seconds=秒
+
+
+get.request.information.failure=无法获取请求信息
+no.such.configuration=没有找到该配置
+
+operation.time=操作时间
+api.name=接口名称
+request.url=请求地址
+ip.address=IP地址
+browser=浏览器
+operating.system=操作系统
+request.method=请求方式
+class.name=类名
+method.name=方法名
+request.parameters=请求参数
+parameter.type=参数类型
+token=Token
+remark=备注
+referer=访问来源
+success=是否执行成功
+specific.message=具体消息
+execution.time=方法耗时
+stack.trace=异常堆栈
+
+port=运行端口
+app.version=应用程序版本
+java.version=Java 版本
+pid=PID
+uptime=运行时间
+hostname=主机名
+username=用户名
+os.version=操作系统版本
+os.arch=操作系统架构
+memory.usage=内存占用
+total.memory=总内存大小
+free.memory=空闲内存大小
+total.space=当前磁盘总空间
+free.space=当前磁盘空闲空间
+upload.path=文件上传路径
+directory.size=目录大小
+number.of.managed.files=已管理文件数量
+database.path=数据库路径
+database.size=数据库大小
+number.of.pastes=Paste 数量
+number.of.bookmarks=书签数量
