--- a/backend/src/main/resources/messages_en.properties
+++ b/backend/src/main/resources/messages_en.properties
@@ -24,7 +24,15 @@ file.does.not.exist=File does not exist.
 access.failure=Unable to access.
 no.incoming.files=No incoming files.
 file.is.too.large=File is too large, no preview allowed.
-
+get.request.information.failure=Failed to get request information.
+no.such.configuration=No such configuration found.
+no.permission=No permission.
+token.deactivated=This token has been deactivated.
+token.verification.failed=Token verification failed.
+password.is.incorrect=Password is incorrect.
+execute.success=Executed successfully.
+unknown.error=Unknown error
+# File info
 filename=Filename
 length=Length
 relative.path=Relative path
@@ -43,18 +51,7 @@ audio.artist=Artist
 audio.title=Title
 audio.album=Album
 audio.comment=Comment
-
-days=days
-hours=hours
-minutes=minutes
-seconds=seconds
-
-get.request.information.failure=Failed to get request information.
-no.such.configuration=No such configuration found.
-
-
-
-
+# Log
 operation.time=Operation time
 api.name=API name
 request.url=Request URL
@@ -67,13 +64,11 @@ method.name=Method name
 request.parameters=Request parameters
 parameter.type=Parameter type
 token=Token
-remark=Remark
 referer=Referer
 success=Success
 specific.message=Specific message
 execution.time=Execution time
-stack.trace=Stack trace
-
+# Server info
 port=Running port
 app.version=Application version
 java.version=Java version
@@ -95,3 +90,7 @@ database.path=Database path
 database.size=Database size
 number.of.pastes=Number of pastes
 number.of.bookmarks=Number of bookmarks
+days=days
+hours=hours
+minutes=minutes
+seconds=seconds
