--- a/backend/src/main/resources/messages_zh.properties
+++ b/backend/src/main/resources/messages_zh.properties
@@ -24,7 +24,15 @@ file.does.not.exist=文件不存在
 access.failure=无法访问
 no.incoming.files=没有文件
 file.is.too.large=文件过大，不允许预览 
-
+get.request.information.failure=无法获取请求信息
+no.such.configuration=没有找到该配置
+no.permission=没有权限
+token.deactivated=该 Token 已被停用
+token.verification.failed=Token 验证失败
+password.is.incorrect=密码错误
+execute.success=执行成功
+unknown.error=未知错误
+# File info
 filename=文件名
 length=大小
 relative.path=相对路径
@@ -43,16 +51,7 @@ audio.artist=艺术家
 audio.title=标题
 audio.album=专辑
 audio.comment=注释
-
-days=天
-hours=小时
-minutes=分钟
-seconds=秒
-
-
-get.request.information.failure=无法获取请求信息
-no.such.configuration=没有找到该配置
-
+# Log
 operation.time=操作时间
 api.name=接口名称
 request.url=请求地址
@@ -65,13 +64,11 @@ method.name=方法名
 request.parameters=请求参数
 parameter.type=参数类型
 token=Token
-remark=备注
 referer=访问来源
 success=是否执行成功
 specific.message=具体消息
 execution.time=方法耗时
-stack.trace=异常堆栈
-
+# Server info
 port=运行端口
 app.version=应用程序版本
 java.version=Java 版本
@@ -85,7 +82,7 @@ memory.usage=内存占用
 total.memory=总内存大小
 free.memory=空闲内存大小
 total.space=当前磁盘总空间
-free.space=当前磁盘空闲空间
+free.space=当前磁盘可用空间
 upload.path=文件上传路径
 directory.size=目录大小
 number.of.managed.files=已管理文件数量
@@ -93,3 +90,7 @@ database.path=数据库路径
 database.size=数据库大小
 number.of.pastes=Paste 数量
 number.of.bookmarks=书签数量
+days=天
+hours=小时
+minutes=分钟
+seconds=秒
