--- a/frontend/src/locales/en.json
+++ b/frontend/src/locales/en.json
@@ -2,6 +2,17 @@
   "files": "Files",
   "pastes": "Pastes",
   "bookmarks": "Bookmarks",
+  "file_share": "File share",
+  "drag_and_drop": "Upload",
+  "operation_logs": "Operation logs",
+  "server_info": "Server information",
+  "permission_control": "Permission control",
+  "close": "Close",
+  "confirm_delete": "Are you sure you want to delete?",
+  "ok": "OK",
+  "verification": "Verification",
+  "please_enter_the_password": "Please enter the password",
+  "copy_success": "Copied successfully",
   "title": "Title",
   "text": "Text",
   "private": "Private",
@@ -12,5 +23,15 @@
   "burn_after_reading": "Burn after reading",
   "never_expires": "Never expires",
   "post": "Post",
-  "post_on": "Post on"
+  "post_on": "Post on",
+  "success": "Success",
+  "error": "Error",
+  "alert": "Alert",
+  "text_cannot_be_empty": "Text cannot be empty.",
+  "back": "Back",
+  "syntax_highlighting": "Syntax highlighting",
+  "copy": "Copy",
+  "download": "Download",
+  "submit_changes": "Submit changes",
+  "delete": "Delete"
 }
