--- a/frontend/src/locales/zh.json
+++ b/frontend/src/locales/zh.json
@@ -2,6 +2,17 @@
   "files": "文件列表",
   "pastes": "文本共享",
   "bookmarks": "书签列表",
+  "file_share": "文件分享",
+  "drag_and_drop": "拖拽上传",
+  "operation_logs": "操作日志",
+  "server_info": "服务器信息",
+  "permission_control": "权限控制",
+  "close": "关闭",
+  "confirm_delete": "确定要删除吗？",
+  "ok": "确定",
+  "verification": "验证",
+  "please_enter_the_password": "请输入密码",
+  "copy_success": "复制成功",
   "title": "标题",
   "text": "正文",
   "private": "私密",
@@ -12,5 +23,15 @@
   "burn_after_reading": "阅后即焚",
   "never_expires": "永不过期",
   "post": "发布",
-  "post_on": "发布于"
+  "post_on": "发布于",
+  "success": "成功",
+  "error": "失败",
+  "alert": "提示",
+  "text_cannot_be_empty": "正文不能为空",
+  "back": "返回",
+  "syntax_highlighting": "代码高亮",
+  "copy": "复制",
+  "download": "下载",
+  "submit_changes": "提交修改",
+  "delete": "删除"
 }
