refactor Front-end

--- a/frontend/src/locales/en.json
+++ b/frontend/src/locales/en.json
@@ -6,13 +6,43 @@
   "drag_and_drop": "Upload",
   "operation_logs": "Operation logs",
   "server_info": "Server information",
-  "permission_control": "Permission control",
+  "permission_control": "Permissions",
   "close": "Close",
   "confirm_delete": "Are you sure you want to delete?",
   "ok": "OK",
+  "upload_progress": "Upload progress",
+  "download_progress": "Download progress",
+  "upload_files": "Upload",
+  "upload_folder": "Upload folder",
+  "new_folder": "New folder",
+  "refresh": "Refresh",
+  "paste": "Paste",
+  "multi_select": "Select",
+  "cut": "Cut",
+  "zip": "Compress",
+  "zip_files": "Compress files",
+  "search": "Search",
+  "type": "Type",
+  "filename": "Filename",
+  "size": "Size",
+  "last_modified": "Last modified time",
+  "action": "Action",
+  "rename": "Rename",
+  "view_details": "View details",
+  "enter_a_new_folder_name": "Enter a new folder name.",
+  "enter_a_new_file_name": "Enter a new file name.",
+  "preview": "Preview",
+  "share": "Share",
+  "generate_direct_link": "Generate direct link",
+  "folder_name_cannot_be_empty": "Folder name cannot be empty.",
+  "cut_success": "Cut successfully.",
+  "file_info": "File information",
+  "network_request_error": "Network request error",
+  "command": "Command",
+  "execute": "Execute",
   "verification": "Verification",
-  "please_enter_the_password": "Please enter the password",
-  "copy_success": "Copied successfully",
+  "please_enter_the_password": "Please enter the password.",
+  "copy_success": "Copied successfully.",
   "title": "Title",
   "text": "Text",
   "private": "Private",
