--- a/frontend/src/locales/zh.json
+++ b/frontend/src/locales/zh.json
@@ -10,6 +10,36 @@
   "close": "关闭",
   "confirm_delete": "确定要删除吗？",
   "ok": "确定",
+  "upload_progress": "上传进度",
+  "download_progress": "下载进度",
+  "upload_files": "上传文件",
+  "upload_folder": "上传文件夹",
+  "new_folder": "新建文件夹",
+  "refresh": "刷新",
+  "paste": "粘贴",
+  "multi_select": "多选",
+  "cut": "剪切",
+  "zip": "压缩",
+  "zip_files": "压缩文件",
+  "search": "搜索",
+  "type": "类型",
+  "filename": "文件名",
+  "size": "大小",
+  "last_modified": "修改时间",
+  "action": "操作",
+  "rename": "重命名",
+  "view_details": "详细信息",
+  "enter_a_new_folder_name": "输入新文件夹名",
+  "enter_a_new_file_name": "输入新文件名",
+  "preview": "预览",
+  "share": "分享",
+  "generate_direct_link": "生成直链",
+  "folder_name_cannot_be_empty": "文件夹名不能为空",
+  "cut_success": "剪切成功",
+  "file_info": "详细信息",
+  "network_request_error": "网络请求错误",
+  "command": "命令",
+  "execute": "执行",
   "verification": "验证",
   "please_enter_the_password": "请输入密码",
   "copy_success": "复制成功",
