--- a/frontend/src/locales/zh.json
+++ b/frontend/src/locales/zh.json
@@ -38,6 +38,16 @@
   "cut_success": "剪切成功",
   "file_info": "详细信息",
   "network_request_error": "网络请求错误",
+  "no_files_selected": "未选择文件/文件夹",
+  "support_drag_and_drop_upload": "支持拖拽到此区域上传，支持选择多个文件/文件夹",
+  "share_code": "分享码",
+  "relative_path": "文件路径",
+  "status": "状态",
+  "valid": "有效",
+  "invalid": "无效",
+  "file_size": "文件大小",
+  "file_type": "文件类型",
+
   "command": "命令",
   "execute": "执行",
   "verification": "验证",
