--- a/frontend/src/locales/en.json
+++ b/frontend/src/locales/en.json
@@ -47,6 +47,9 @@
   "invalid": "Invalid",
   "file_size": "File size",
   "file_type": "File type",
+  "clear": "Clear",
+  "export": "Export",
+  "view": "View",
 
   "command": "Command",
   "execute": "Execute",
