--- a/frontend/src/locales/en.json
+++ b/frontend/src/locales/en.json
@@ -50,7 +50,13 @@
   "clear": "Clear",
   "export": "Export",
   "view": "View",
-
+  "configuration": "Configuration",
+  "update_configuration": "Update configuration",
+  "enter_configuration_value": "Please enter the new value of the configuration item \"{item}\".",
+  "api_name": "API name",
+  "api_url": "API URL",
+  "admin": "Admin",
+  "anonymous": "Anonymous",
   "command": "Command",
   "execute": "Execute",
   "verification": "Verification",
