feat Switch language; file hash

--- a/backend/src/main/resources/messages_en.properties
+++ b/backend/src/main/resources/messages_en.properties
@@ -51,6 +51,7 @@ audio.artist=Artist
 audio.title=Title
 audio.album=Album
 audio.comment=Comment
+file.hash=File hash
 # Log
 operation.time=Operation time
 api.name=API name
@@ -90,7 +91,11 @@ database.path=Database path
 database.size=Database size
 number.of.pastes=Number of pastes
 number.of.bookmarks=Number of bookmarks
+executable.path=Executable path
+working.directory=Working directory
+path.does.not.exist=The specified path does not exist.
 days=days
 hours=hours
 minutes=minutes
 seconds=seconds
+directory.name.illegal=Directory name contains illegal characters.
