--- a/backend/src/main/resources/messages_zh.properties
+++ b/backend/src/main/resources/messages_zh.properties
@@ -51,6 +51,7 @@ audio.artist=艺术家
 audio.title=标题
 audio.album=专辑
 audio.comment=注释
+file.hash=文件哈希
 # Log
 operation.time=操作时间
 api.name=接口名称
@@ -90,7 +91,11 @@ database.path=数据库路径
 database.size=数据库大小
 number.of.pastes=Paste 数量
 number.of.bookmarks=书签数量
+executable.path=应用程序路径
+working.directory=工作目录路径
+path.does.not.exist=指定路径不存在
 days=天
 hours=小时
 minutes=分钟
 seconds=秒
+directory.name.illegal=目录名称包含非法字符
