--- a/frontend/src/locales/en.json
+++ b/frontend/src/locales/en.json
@@ -90,5 +90,6 @@
   "enter_name": "Enter name",
   "folder_is_empty": "Folder is empty.",
   "open": "Open",
-  "change_language": "Switch language"
+  "change_language": "Switch language",
+  "access_denied": "Access denied."
 }
