feat Update bookmark; fix Path mapping

--- a/backend/src/main/resources/messages_en.properties
+++ b/backend/src/main/resources/messages_en.properties
@@ -99,3 +99,4 @@ hours=hours
 minutes=minutes
 seconds=seconds
 directory.name.illegal=Directory name contains illegal characters.
+directory.already.exists=The directory name already exists and cannot be duplicated.
