adjust for macOS

--- a/backend/src/main/resources/messages_en.properties
+++ b/backend/src/main/resources/messages_en.properties
@@ -65,6 +65,7 @@ method.name=Method name
 request.parameters=Request parameters
 parameter.type=Parameter type
 token=Token
+remark=Remark
 referer=Referer
 success=Success
 specific.message=Specific message
