--- a/backend/src/main/resources/messages_zh.properties
+++ b/backend/src/main/resources/messages_zh.properties
@@ -65,6 +65,7 @@ method.name=方法名
 request.parameters=请求参数
 parameter.type=参数类型
 token=Token
+remark=备注
 referer=访问来源
 success=是否执行成功
 specific.message=具体消息
