feat: batch delete pastes

--- a/frontend/src/locales/en.json
+++ b/frontend/src/locales/en.json
@@ -65,6 +65,7 @@
   "title": "Title",
   "text": "Text",
   "private": "Private",
+  "encrypted": "Encrypted",
   "minutes": "Minutes",
   "hours": "Hours",
   "days": "Days",
