--- a/backend/src/main/resources/messages_en.properties
+++ b/backend/src/main/resources/messages_en.properties
@@ -1,3 +1,8 @@
+# files
+
+
+
+
 add.success=Added successfully.
 add.failure=Failed to add.
 delete.success=Deleted successfully.
@@ -6,10 +11,8 @@ update.success=Modified successfully.
 update.failure=Failed to modify.
 query.success=Retrieved successfully.
 query.failure=Failed to retrieve.
-upload.success=Uploaded successfully.
-some.files.upload.failure=Some files failed to upload.
-create.directory.success=Directory created successfully.
-create.directory.failure=Failed to create directory.
+
+
 compress.success=Compressed successfully.
 compress.failure=Failed to compress.
 move.success=Moved successfully.
@@ -19,10 +22,18 @@ rename.success=Renamed successfully.
 rename.failure=Failed to rename.
 generate.success=Generated successfully.
 unsupported.file.type=Unsupported file type.
-file.already.exists=File already exists.
+
 file.does.not.exist=File does not exist.
 access.failure=Unable to access.
+
+
 no.incoming.files=No incoming files.
+upload.success=Uploaded successfully.
+some.files.upload.failure=Some files failed to upload.
+file.already.exists=File already exists.
+create.directory.success=Directory created successfully.
+create.directory.failure=Failed to create directory.
+
 file.is.too.large=File is too large, no preview allowed.
 get.request.information.failure=Failed to get request information.
 no.such.configuration=No such configuration found.
