--- a/backend/src/main/resources/messages_zh.properties
+++ b/backend/src/main/resources/messages_zh.properties
@@ -81,10 +81,10 @@ username=用户名
 os.version=操作系统版本
 os.arch=操作系统架构
 memory.usage=内存占用
-total.memory=总内存大小
+total.memory=内存大小
 free.memory=空闲内存大小
 total.space=当前磁盘总空间
-free.space=当前磁盘可用空间
+free.space=当前磁盘空间
 upload.path=文件上传路径
 directory.size=目录大小
 number.of.managed.files=已管理文件数量
